* Category default image not working when category imported via csv - FIXED
* Jupiter theme GD page sidebars not working - FIXED
* AJAX listings pagination not working is email allowed to show on listings - FIXED
* Newspaper theme sidebar position not working on GD pages - FIXED
* Duplicate image slider id breaks ajax image slider - FIXED

= 2.0.0.64 = 
* Beaver Builder content does not work for archive item template - FIXED
* Autocomplete search result selection looses street number for some locations - FIXED
* Option added to add Geocoding API key - ADDED
* Allow to choose Font Awesome pro icons for active Pro subscription - ADDED
* IE displays bg image over listing content - FIXED
* GD Map allows to filter listings by tags - ADDED
* Change country name "Russian Federation" to "Russia" - CHANGED
* Missing required field error may results in JavaScript error - FIXED
* Link in no posts found message redirects to wrong add listing post type page - FIXED
* Listings widget list view not setting as widget checks for empty value - FIXED
* Changes for location queries for GPS position - CHANGED
* Post SMTP plugin conflicts with GD post save - FIXED

= 2.0.0.63 =
* Image import for old posts can set the wrong image url for the featured image - FIXED
* Ability to add captions to the images slider - ADDED
* Recent reviews widget does not display the correct number of reviews - FIXED
* Apostrophe in title or caption wipes out the rest of the title/caption - FIXED
* Sort by images is not working - FIXED
* Custom Sidebars plugin compatibility - ADDED
* Support added for image/webp type image upload - ADDED
* GD Pages shows blank content when page not setup with Divi page builder - FIXED
* Not able to setup GD search page with Divi page builder - FIXED
* Individual word search limit shows unexpected results - FIXED
* MightyMag theme compatibility for GD pages - ADDED
* Sticky map not working with OpenStreetMap - FIXED